--- a/HomeworkPustok/Pustok/Views/Shared/_BookSliderPartial.cshtml
+++ b/HomeworkPustok/Pustok/Views/Shared/_BookSliderPartial.cshtml
@@ -21,7 +21,7 @@
                         @item.Author?.FullName
                     </a>
                     <h3>
-                        <a href="product-details.html">
+                        <a asp-controller="Book" asp-action="Detail" asp-route-id="@item.Id">
                             @item.Name
                         </a>
                     </h3>
