--- a/HomeworkPustok/Pustok/Views/Book/Detail.cshtml
+++ b/HomeworkPustok/Pustok/Views/Book/Detail.cshtml
@@ -62,18 +62,31 @@
 			</div>
 			<div class="col-lg-7">
 				<div class="product-details-info pl-lg--30 ">
-					<p class="tag-block">Tags: <a href="#">Movado</a>, <a href="#">Omega</a></p>
-					<h3 class="product-title">Beats EP Wired On-Ear Headphone-Black</h3>
+					<p class="tag-block">Tags: @foreach (var item in Model.BookTags)
+						{
+							<a href="#">@item.TagId</a>
+
+						}</p>
+					<h3 class="product-title">@Model.Name</h3>
 					<ul class="list-unstyled">
-						<li>Ex Tax: <span class="list-value"> £@Model.SalePrice</span></li>
-						<li>Genre: <a href="#" class="list-value font-weight-bold"> @Model.Genre</a></li>
+						<li>Ex Tax: <span class="list-value"> £@Model.SalePrice.ToString("0.00")</span></li>
+						<li>Genre: <a href="#" class="list-value font-weight-bold"> @Model.Genre.Name</a></li>
 						<li>Book name: <span class="list-value"> @Model.Name</span></li>
 						<li>Reward Points: <span class="list-value"> 200</span></li>
 						<li>Availability: <span class="list-value">@(Model.StockStatus ? "In Stock" : "Out Stock") </span></li>
 					</ul>
 					<div class="price-block">
-						<span class="price-new">£73.79</span>
-						<del class="price-old">£91.86</del>
+						@if (@Model.DiscountPercent > 0)
+						{
+							decimal discountedPrice = @Model.SalePrice * (100 - @Model.DiscountPercent) / 100;
+
+							<span class="price">£@discountedPrice.ToString("0.00")</span>
+							<del class="price-old">£@Model.SalePrice.ToString("0.00")</del>
+						}
+						else
+						{
+							<span class="price">£@Model.SalePrice.ToString("0.00")</span>
+						}
 					</div>
 					<div class="rating-widget">
 						<div class="rating-block">
